--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/forum
+spring.datasource.url=jdbc:mysql://localhost:3306/auproject
 spring.datasource.username=root
-spring.datasource.password=Ashit123@
+spring.datasource.password=qwerty123
 
 spring.jpa.hibernate.ddl-auto=update
