--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 server.port=8080
-spring.datasource.url=jdbc:mysql://localhost:3306/forum
+spring.datasource.url=jdbc:mysql://localhost:3306/auproject
 spring.datasource.username=debian-sys-maint
 spring.datasource.password=eKPoDqcgzYQdr82J
 
