--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -21,6 +21,14 @@
     "@angular/platform-browser": "~11.2.3",
     "@angular/platform-browser-dynamic": "~11.2.3",
     "@angular/router": "~11.2.3",
+    "@ngrx/effects": "^11.0.1",
+    "@ngrx/entity": "^11.0.1",
+    "@ngrx/router-store": "^11.0.1",
+    "@ngrx/store": "^11.0.1",
+    "@ngrx/store-devtools": "^11.0.1",
+    "ngrx-store-freeze": "^0.2.4",
+    "ngrx-store-localstorage": "^11.0.0",
+    "ngx-bootstrap": "^6.2.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
     "zone.js": "~0.11.3"
