--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -2,6 +2,7 @@
 server.port=8080
 spring.datasource.url=jdbc:mysql://localhost:3306/auproject
 spring.datasource.username=root
-spring.datasource.password=qwerty123
+spring.datasource.password=sakshi1419
+
 
 spring.jpa.hibernate.ddl-auto=update
