--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -60,6 +60,29 @@
 	    <artifactId>spring-boot-starter-mail</artifactId>
 	    <version>2.3.4.RELEASE</version>
 	</dependency>
+	
+        <dependency>
+           <groupId>org.mockito</groupId>
+           <artifactId>mockito-all</artifactId>
+           <version>1.10.8</version>
+           <scope>test</scope>
+       </dependency>
+       <dependency>
+           <groupId>org.apache.logging.log4j</groupId>
+           <artifactId>log4j-api</artifactId>
+           <version>2.2</version>
+       </dependency>
+       <dependency>
+           <groupId>org.apache.logging.log4j</groupId>
+           <artifactId>log4j-core</artifactId>
+           <version>2.2</version>
+       </dependency>
+       <dependency>
+           <groupId>junit</groupId>
+           <artifactId>junit</artifactId>
+           <version>4.12</version>
+           <scope>test</scope>
+       </dependency>
 
 	</dependencies>
 
