--- a/Backend/src/main/resources/application.properties
+++ b/Backend/src/main/resources/application.properties
@@ -4,5 +4,11 @@ spring.datasource.url=jdbc:mysql://localhost:3306/auproject
 spring.datasource.username=root
 spring.datasource.password=sakshi1419
 
-
 spring.jpa.hibernate.ddl-auto=update
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=auprojecteam2@gmail.com
+spring.mail.password=auprojectforum
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
