--- a/Backend/bin/pom.xml
+++ b/Backend/bin/pom.xml
@@ -32,10 +32,6 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-data-jpa</artifactId>
 		</dependency>
-		<!-- <dependency>
-			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-thymeleaf</artifactId>
-		</dependency> -->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
@@ -58,7 +54,7 @@
 	<dependency>
 	    <groupId>org.springframework.boot</groupId>
 	    <artifactId>spring-boot-starter-mail</artifactId>
-	    <version>2.3.4.RELEASE</version>
+	    <version>2.3.4.RELEASE</version><!--$NO-MVN-MAN-VER$-->
 	</dependency>
 	
         <dependency>
@@ -70,17 +66,17 @@
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-api</artifactId>
-           <version>2.2</version>
+           <version>2.2</version><!--$NO-MVN-MAN-VER$-->
        </dependency>
        <dependency>
            <groupId>org.apache.logging.log4j</groupId>
            <artifactId>log4j-core</artifactId>
-           <version>2.2</version>
+           <version>2.2</version><!--$NO-MVN-MAN-VER$-->
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
-           <version>4.12</version>
+           <version>4.12</version><!--$NO-MVN-MAN-VER$-->
            <scope>test</scope>
        </dependency>
 
@@ -98,6 +94,27 @@
                 <artifactId>sonar-maven-plugin</artifactId>
                 <version>3.4.0.905</version>
             </plugin>
+            
+                <plugin>
+				   <groupId>org.jacoco</groupId>
+				   <artifactId>jacoco-maven-plugin</artifactId>
+				   <version>0.8.5</version>
+				   <executions>
+				     <execution>
+				       <id>prepare-agent</id>
+				       <goals>
+				        <goal>prepare-agent</goal>
+				       </goals>
+				     </execution>
+				     <execution>
+				       <id>report</id>
+				       <goals>
+				        <goal>report</goal>
+				       </goals>
+				     </execution>
+				   </executions>
+				 </plugin>
+			
 		</plugins>
 	</build>
 	
