--- a/Backend/bin/.gitignore
+++ b/Backend/bin/.gitignore
@@ -18,6 +18,7 @@ target/
 *.iws
 *.iml
 *.ipr
+*.log
 
 ### NetBeans ###
 /nbproject/private/
@@ -31,3 +32,9 @@ build/
 
 ### VS Code ###
 .vscode/
+/.gitignore
+/.mvn/
+/log/
+/mvnw
+/mvnw.cmd
+/src/
