Added Test Cases for Controllers

--- a/Backend/.gitignore
+++ b/Backend/.gitignore
@@ -3,6 +3,9 @@ target/
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
+/*.log
+log/DiscussionForum.log
+
 
 ### STS ###
 .apt_generated
@@ -18,7 +21,6 @@ target/
 *.iws
 *.iml
 *.ipr
-*.log
 
 ### NetBeans ###
 /nbproject/private/
