--- a/Backend/pom.xml
+++ b/Backend/pom.xml
@@ -79,6 +79,11 @@
            <version>4.12</version><!--$NO-MVN-MAN-VER$-->
            <scope>test</scope>
        </dependency>
+       <dependency>
+            <groupId>org.mindrot</groupId>
+            <artifactId>jbcrypt</artifactId>
+	    <version>0.3m</version>
+        </dependency>
 
 	</dependencies>
 
